--- a/SpiderFoot/SpiderFoot.cfg
+++ b/SpiderFoot/SpiderFoot.cfg
@@ -35,6 +35,7 @@ sfp_googlemaps:api_key=
 sfp_googlesafebrowsing:api_key=
 sfp_googlesearch:api_key=
 sfp_grayhatwarfare:api_key=
+# GreyNoise API - https://docs.greynoise.io/docs/getting-started#access-your-trial-api-key-on-your-account-page
 sfp_greynoise:api_key=
 sfp_haveibeenpwned:api_key=
 sfp_honeypot:api_key=
