--- a/scripts/tpot.conf
+++ b/scripts/tpot.conf
@@ -1,4 +1,7 @@
-# tpot configuration file
-myCONF_TPOT_FLAVOR='STANDARD'
-myCONF_WEB_USER='webuser'
-myCONF_WEB_PW='w3b$ecret'
+      # tpot configuration file
+      myCONF_TPOT_FLAVOR='STANDARD'
+      myCONF_WEB_USER='webuser'
+      myCONF_WEB_PW='w3b$ecret'
+    owner: root:root
+    path: /root/tpot.conf
+    permissions: '0600'
