--- a/scripts/tpot.conf
+++ b/scripts/tpot.conf
@@ -1,7 +1,7 @@
       # tpot configuration file
       myCONF_TPOT_FLAVOR='STANDARD'
       myCONF_WEB_USER='webuser'
-      myCONF_WEB_PW='w3b$ecret'
+      myCONF_WEB_PW='w3b$ecrets2!'
     owner: root:root
     path: /root/tpot.conf
     permissions: '0600'
